Add a stop button feature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div>
     <span id='time'>25:00</span>
     <button id='start-button'>Start</button>
+    <button id='stop-button'>Stop</button>
   </div>
 
   <script type='text/javascript' src='core.js'></script>
