Implement reset feature

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <span id='time'>25:00</span>
     <button id='start-button'>Start</button>
     <button id='stop-button'>Stop</button>
+    <button id='reset-button'>Reset</button>
   </div>
 
   <script type='text/javascript' src='core.js'></script>
