Separate functions into different modules/folders

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" href="#" />
   <title>Pomodoro</title>
 </head>
 
@@ -16,7 +17,7 @@
     <button id='reset-button'>Reset</button>
   </div>
 
-  <script type='text/javascript' src='core.js'></script>
+  <script type="module" src='src/core.js'></script>
 </body>
 
 </html>
