Add cursor to buttons and import missing functions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" href="#" />
+  <link rel="shortcut icon" href="#">
+  <link rel="stylesheet" href="main.css">
   <title>Pomodoro</title>
 </head>
 
