--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="button-groups">
             <button id='start-button' class="button button--primary">Start</button>
             <button id='stop-button' class="button button--danger">Stop</button>
-            <button id='reset-button' class="button">Reset</button>
+            <button id='reset-button' class="button button--reset">Reset</button>
           </div>
         </div>
       </div>
